# Luxen

./: .gitignore  .pdm-python  README.md  pyproject.toml
src/luxen/data/: Euronext_Equities_2024-01-03.csv  Euronext_Equities_2024-02-25.csv  scandi.txt
src/luxen/utils/: prcftch.py
